support box on mobile, text align issue

--- a/app/assets/styles/base/_typography.css
+++ b/app/assets/styles/base/_typography.css
@@ -181,7 +181,6 @@
   font-family: Lato;
   font-size: 15px;
   line-height: 1.47;
-  text-align: left;
   color: $greyish-brown;
 }
 
